echoserver.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: echo-server
  name: echo-server
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    component: echo-server
