nginx-webserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    component: webserver
